manifests/app-hom/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k002-hom-nginx-svc
spec:
  selector:
    app: k002-hom-nginx-dep

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
