manifests/app-hom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k002-hom-nginx-ing
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: hom.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k002-hom-nginx-svc
            port:
              number: 80
